--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
     <head>
         <title>My awesome web page</title>
+        <h1> I'm a header, in case you didn't know. </h1>
     </head>
 
   <body>
     Hello there, awesome person! 
   </body>
-
+<img src="https://avatars.githubusercontent.com/u/90528437?v=4">
 </html>
