--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
     <head>
         <title>My awesome web page</title>
         <h1></h1>
-    </head>
+<img src="https://avatars.githubusercontent.com/u/90528437?v=4">
+
 
   <body>
     Hello there, awesome person! 
