--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 
   <body>
     Hello there, awesome person! 
+    Do you want to see a list of my classes?
+      <ol>
+          <li> Calculus III </li>
+          <li> Data Structures and Algorithms </li>
+          <li> Digital Logic Systems </li>
+          <li> Discrete Structures </li>
+          <li> Scripting Languages </li>
+      </ol>
   </body>
 
 </html>
