--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     Do you want to see a list of my classes?
       <ol>
           <li> Calculus III </li>
-          <li> Data Structures and Algorithms </li>
+      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
           <li> Digital Logic Systems </li>
           <li> Discrete Structures </li>
           <li> Scripting Languages </li>
