--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
     <head>
+        <link rel="stylesheet" href="style.css">
         <title>My awesome web page</title>
-        <h1></h1>
+        <h1>this is a header</h1>
 <img src="https://avatars.githubusercontent.com/u/90528437?v=4">
 
 
