--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
         <link rel="stylesheet" href="style.css">
         <title>My awesome web page</title>
         <h1>this is a header</h1>
-<img src="https://avatars.githubusercontent.com/u/90528437?v=4">
+        <img src="https://avatars.githubusercontent.com/u/90528437?v=4">
+    </head>
 
 
   <body>
@@ -11,11 +12,11 @@
     Do you want to see a list of my classes?
       <ol>
           <li> Calculus III </li>
-      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
+          <li>My favorite site is <a href="https://miniclip.com">Miniclip</a>!</li>
           <li> Digital Logic Systems </li>
           <li> Discrete Structures </li>
           <li> Scripting Languages </li>
-          <li> my favourite website is <a href="http://www.google.com"></li>
+          <li> my favourite search engine is <a href="http://www.google.com">Google</a></li>
       </ol>
   </body>
 
